use different breadcrumb links for different languages

--- a/_data/display_as_py_r.yml
+++ b/_data/display_as_py_r.yml
@@ -11,28 +11,28 @@ signal-analysis:
     reference: '#signal-analysis'
     text: Signal Analysis
 file_settings:
-    reference: '#fundamentals'
+    reference: 'plotly-fundamentals'
     text: Plotly Fundamentals
 basic:
-    reference: '#basic-charts'
+    reference: 'basic-charts'
     text: Basic
 statistical:
-    reference: '#statistical-charts'
+    reference: 'statistical-charts'
     text: Statistical
 scientific:
-    reference: '#scientific-charts'
+    reference: 'scientific-charts'
     text: Scientific
 financial:
     reference: '#financial-charts'
     text: Financial
 maps:
-    reference: '#maps'
+    reference: 'maps'
     text: Maps
 3d_charts:
-    reference: '#3d-charts'
+    reference: '3d-charts'
     text: 3D
 multiple_axes:
-    reference: '#multiple-axes-subplots-and-insets'
+    reference: 'subplot-charts'
     text: Subplots
 transforms:
     reference: '#transforms'
