--- a/_data/display_as_js.yml
+++ b/_data/display_as_js.yml
@@ -14,13 +14,13 @@ file_settings:
     reference: '#fundamentals'
     text: Plotly Fundamentals
 basic:
-    reference: '#basic-charts'
+    reference: 'basic-charts'
     text: Basic
 statistical:
-    reference: '#statistical-charts'
+    reference: 'statistical-charts'
     text: Statistical
 scientific:
-    reference: '#scientific-charts'
+    reference: 'scientific-charts'
     text: Scientific
 financial:
     reference: '#financial-charts'
@@ -29,7 +29,7 @@ maps:
     reference: '#maps'
     text: Maps
 3d_charts:
-    reference: '#3d-charts'
+    reference: '3d-charts'
     text: 3D
 multiple_axes:
     reference: '#multiple-axes-subplots-and-insets'
